[tool.poetry]
name = "uniswatch"
version = "0.1.0"
description = "uniswap exchange analytics"
authors = ["banteg <banteeg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
web3 = "^4.8"
attrdict = "^2.0"
toml = "^0.10.0"
asyncpg = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
